# IoT-CLAB

./: LICENSE  README.md  build-images.sh  reset-dc.sh  sdn-dcn.clab.yml  setup-dc.sh
Jupyter/: OG-Test.ipynb
api-script-examples/: api-example-GET.ps1  api-example-GET.py  api-example-POST.ps1  api-example-POST.py
data_processing/data/netflow_data/year=2024/month=08/day=25/: netflow_data_20240825_205413.parquet  netflow_data_20240825_205424.parquet  netflow_data_20240825_205453.parquet  netflow_data_20240825_205503.parquet  netflow_data_20240825_205513.parquet  netflow_data_20240825_205542.parquet  netflow_data_20240825_205552.parquet  netflow_data_20240825_205615.parquet  netflow_data_20240825_205625.parquet  netflow_data_20240825_205653.parquet  netflow_data_20240825_205703.parquet  (+153 more)
data_processing/data_exploration/: README.md  Untitled.ipynb  pyproject.toml
data_processing/data_exploration/src/notebooks/: initial_exploration.ipynb  sample.ipynb
data_processing/python_consumer/: .gitignore  README.md  pyproject.toml
data_processing/python_consumer/src/: app.py
data_processing/python_consumer/src/services/: kafka_consumer.py
flowcoll/: docker-compose.yml
iot-docker/crazy-api/: dockerfile  start.sh
iot-docker/crazy-api-2/: start.sh
iot-docker/mqtt-sim/: dockerfile  mqtt_device.py
iot-docker/radio/: dockerfile  start.sh
iot-docker/streamer-nasa/: start.sh
iot-docker/streamer-nasa-relay/: dockerfile  start.sh
iot-docker/streamer-nat/: Dockerfile  start.sh
iot-docker/weather-api/: Dockerfile
kafka/: docker-compose.yaml
