[project]
name = "data_exploration"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ThusByZarathustra", email = "edwinstoltz.es@gmail.com"},
]
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.2.4",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
