[project]
name = "python_consumer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ThusByZarathustra", email = "edwinstoltz.es@gmail.com"},
]
dependencies = [
    "confluent-kafka>=2.5.0",
    "kafka-python>=2.0.2",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
]
[tool.pdm.scripts]
start = {cmd = "python3 src/app.py"}
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
